--- a/components/messageBoxes.module.css
+++ b/components/messageBoxes.module.css
@@ -1,6 +1,7 @@
 .messageBox {
     padding  : 0px 50px;
     font-size: 20px;
+    margin-top: 25px;
 }
 
 .messageBoxInnerGrid {
